# WeatherMate

./: .gitignore  README.md  pyproject.toml  start.bat
weathermate/api/: ai.py  air_condition.py  shortTerm.py
weathermate/main/: main.py  temp.py
weathermate/main/widgets/: DayWeather.py  LiveWeather.py  Plot.py
weathermate/responseHandler/: stfc.py
weathermate/tools/: globalVar.py  translator.py
